# Emerald

./: .gitignore  .gitmodules  404.html  Cargo.toml  LICENSE  Makefile.toml  README.md  index.html  linker.ld  links.md.template  print.html  rust-toolchain.toml  searchindex.js  searchindex.json  x86-64-os.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_docs.sh  ci.yml  docs.yml
book/: .gitignore  book.toml
book/src/: SUMMARY.md  index.md  links.md.template  userspace.md
common/src/: syscalls.rs
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/amjad_os_kernel_user_link/: all.html  constant.FD_STDERR.html  constant.FD_STDIN.html  constant.FD_STDOUT.html  index.html  macro.call_syscall.html  macro.sys_arg!.html  macro.sys_arg.html  macro.to_arg_err.html  macro.verify_args.html
docs/arrayvec/: all.html  index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html
docs/az/: all.html  fn.cast.html  fn.checked_cast.html  fn.overflowing_cast.html  fn.saturating_cast.html  fn.unwrapped_cast.html  fn.wrapping_cast.html  index.html  struct.Round.html  trait.Az.html  trait.Cast.html  trait.CastFrom.html  (+15 more)
extra/: heap_allocator.html  index.html  kernel_user_link.html
filesystem/: message.txt
kernel/: Cargo.toml  Makefile.toml  boot.html  build.rs  grub.cfg  index.html  linker.ld  x86-64-os.json
kernel/.cargo/: config.toml
kernel/acpi/: aml.html  index.html
kernel/boot/: cmdline.html  index.html
kernel/clocks/: hpet.html  index.html  pit.html  rtc.html  tsc.html
kernel/drivers/: hpet.html  ide.html  index.html  keyboard.html  mouse.html  rtc.html  uart.html
kernel/filesystem/: fat.html  index.html
kernel/graphics/: index.html  vga.html
kernel/logging/: index.html
kernel/memory/: index.html  memory_layout.html  physical_allocator.html  virtual_mapper.html  virtual_space.html
kernel/network/: index.html
kernel/power/: index.html
kernel/processes/: executables.html  index.html  scheduler.html  syscalls.html
kernel/processor/: apic.html  gdt.html  index.html  interrupts.html
kernel/src/: boot.S  cmdline.rs  macros.rs  main.rs  multiboot.rs  multiboot2.rs  panic_handler.rs
kernel/src/acpi/: aml.rs  mod.rs  tables.rs
kernel/src/acpi/aml/: display.rs  execution.rs  mod.rs  parser.rs  structured.rs
kernel/src/acpi/aml/parser/: display.rs  mod.rs  resource_template.rs
kernel/src/acpi/tables/: facp.rs  mod.rs
kernel/src/bios/: tables.rs
kernel/src/cmdline/: macros.rs  parser.rs  tokenizer.rs
kernel/src/collections/: ring.rs
kernel/src/cpu/: gdt.rs  idt.rs  idt_vectors.S  mod.rs
kernel/src/cpu/interrupts/: apic.rs  handlers.rs  mod.rs
kernel/src/devices/: clock.rs  ide.rs  keyboard.rs  mod.rs  pci.rs  pipe.rs
kernel/src/devices/clock/: hpet.rs  mod.rs  rtc.rs  tsc.rs
kernel/src/devices/clock/hardware_timer/: hpet.rs  mod.rs  pit.rs
kernel/src/devices/keyboard_mouse/: keyboard.rs  mod.rs  mouse.rs  ps2.rs
kernel/src/devices/net/: e1000.rs  mod.rs
kernel/src/devices/net/e1000/: desc.rs
kernel/src/executable/: elf.rs  mod.rs
kernel/src/fs/: fat.rs  mapping.rs  mbr.rs  mod.rs  path.rs
kernel/src/graphics/: mod.rs  vga.rs
kernel/src/hw/: qemu.rs
kernel/src/io/: console.rs  keyboard.rs  mod.rs  uart.rs  video_memory.rs
kernel/src/io/console/: tracing.rs  vga_graphics.rs  vga_text.rs
kernel/src/memory_management/: kernel_heap_allocator.rs  memory_layout.rs  mod.rs  physical_page_allocator.rs  virtual_memory.rs  virtual_memory_mapper.rs  virtual_space.rs
kernel/src/net/: headers.rs  mod.rs  socket.rs
kernel/src/power/: mod.rs
kernel/src/process/: mod.rs  scheduler.rs
kernel/src/process/syscalls/: mod.rs
kernel/src/sync/: cache_padded.rs  mod.rs  once.rs
kernel/src/sync/spin/: lock.rs  mod.rs  mutex.rs  remutex.rs  rwlock.rs
kernel/src/testing/: mod.rs
kernel/src/utils/: mod.rs  vcell.rs
kernel/testing/: index.html
kernel/virtual_devices/: console.html  index.html  keyboard.html  pipe.html  power.html
libraries/emerald_runtime/: Cargo.toml  README.md
libraries/emerald_runtime/src/: keyboard.rs  lib.rs  mouse.rs  power.rs
libraries/emerald_std/: Cargo.toml  README.md
libraries/emerald_std/src/: alloc.rs  clock.rs  graphics.rs  io.rs  lib.rs  math.rs  process.rs
libraries/emerald_std/src/sync/: mod.rs
libraries/emerald_std/src/sync/spin/: lock.rs  mod.rs  mutex.rs
libraries/increasing_heap_allocator/: Cargo.toml  README.md
libraries/increasing_heap_allocator/src/: allocator.rs  lib.rs
libraries/kernel_user_link/: Cargo.toml  README.md
libraries/kernel_user_link/src/: clock.rs  file.rs  graphics.rs  keyboard.rs  lib.rs  mouse.rs  power.rs  process.rs  syscalls.rs
libraries/kernel_user_link/src/syscalls/: types_conversions.rs
libraries/keyboard/: Cargo.toml  README.md
libraries/keyboard/src/: lib.rs
libraries/user_std/: Cargo.toml  README.md
libraries/user_std/src/: alloc.rs  io.rs  lib.rs  process.rs
libraries/user_std/src/sync/: once.rs
libraries/user_std/src/sync/spin/: lock.rs  mutex.rs
src/: boot.S  cpu.rs  macros.rs  main.rs  memory_layout.rs  multiboot.rs  physical_page_allocator.rs  video_memory.rs
tools/: install_toolchain.sh  install_toolchain_and_link.sh  install_zipped_toolchain_and_link.sh  video_to_zip.sh
userspace/: Makefile.toml  Makefile.toolchain.toml  index.html  libraries.html  programs.html  rust-toolchain.toml  rust_std.html
userspace/graphics/: Cargo.toml
userspace/graphics/src/: lib.rs  main.rs  video.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs
userspace/shell/: Cargo.toml  logo.ans
userspace/shell/src/: cat.rs  clock.rs  echo.rs  keyboard.rs  ls.rs  main.rs  mouse.rs  power.rs  shell.rs  shutdown.rs  time.rs  tree.rs  xxd.rs
xtask/: Cargo.toml  README.md  index.html  profiler.html
xtask/src/: args.rs  kernel.rs  main.rs  profiler.rs  toolchain.rs  userspace.rs  utils.rs
xtask/src/kernel/: build.rs  check.rs  iso.rs  run.rs  test.rs
xtask/src/userspace/: check.rs
(+4805 files in other folders)
