[workspace]
resolver = "2"
default-members = ["kernel"]
members = [
    "kernel",
    "xtask",
    "libraries/kernel_user_link", "libraries/increasing_heap_allocator", "libraries/emerald_std",
    "libraries/emerald_runtime",
    "userspace/init", "userspace/shell", "userspace/graphics", 
]

exclude = ["extern"]

[patch.crates-io]
jpeg-decoder = { git = "https://github.com/Amjad50/jpeg-decoder", branch = "master" }
