[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel_user_link = { version="0.1.0", path = "../libraries/kernel_user_link", package = "amjad_os_kernel_user_link" }
increasing_heap_allocator = { version="0.1.0", path = "../libraries/increasing_heap_allocator" }
