[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel_user_link = { version="0.2.0", path = "../libraries/kernel_user_link", package = "emerald_kernel_user_link" }
increasing_heap_allocator = { version="0.1.3", path = "../libraries/increasing_heap_allocator" }
embedded-graphics = { version = "0.8.1", default-features = false }
byteorder = { version = "1.5", default-features = false }
