[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0.81"
argh = "0.1.12"
cargo_metadata = "0.18.1"
glob = "0.3.1"
qapi = { version = "0.15", features = ["qapi-qmp", "qapi-qga"] }
framehop = "0.14"
elf = "0.8"
rustc-demangle = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

