[package]
name = "emerald_std"
version = "0.2.7"
edition = "2021"
readme = "README.md"
authors = ["Amjad Alsharafi"]
license = "MIT"
repository = "https://github.com/Amjad50/Emerald"
description = "bare basic std functionality for the userspace programs for Emerald OS"
keywords = ["userspace", "kernel", "os"]
categories = ["os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
increasing_heap_allocator = { version="0.1.3", path = "../increasing_heap_allocator" }
kernel_user_link = { version="0.2.4", path = "../kernel_user_link", package = "emerald_kernel_user_link" }
# for now, waiting for the PR https://github.com/rust-lang/libm/pull/290 to be merged
libm = { version = "0.2.8", git = "https://github.com/Amjad50/libm", branch = "compiling_libm_for_std" }

core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.2", optional = true }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[features]
rustc-dep-of-std = [
    "core",
    "compiler_builtins",
    "alloc",
    "compiler_builtins/mem",
    "kernel_user_link/rustc-dep-of-std",
    "increasing_heap_allocator/rustc-dep-of-std",
    "libm/rustc-dep-of-std"
]
