[package]
name = "emerald_std"
version = "0.3.2"
edition = "2021"
readme = "README.md"
authors = ["Amjad Alsharafi"]
license = "MIT"
repository = "https://github.com/Amjad50/Emerald"
description = "bare basic std functionality for the userspace programs for Emerald OS"
keywords = ["userspace", "kernel", "os"]
categories = ["os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
increasing_heap_allocator = { version="0.1.3", path = "../increasing_heap_allocator" }
kernel_user_link = { version="0.2.12", path = "../kernel_user_link", package = "emerald_kernel_user_link" }

core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.111", optional = true }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[features]
rustc-dep-of-std = [
    "core",
    "compiler_builtins",
    "alloc",
    "compiler_builtins/mem",
    "kernel_user_link/rustc-dep-of-std",
    "increasing_heap_allocator/rustc-dep-of-std"
]
