[package]
name = "increasing_heap_allocator"
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = ["Amjad Alsharafi"]
license = "MIT"
repository = "https://github.com/Amjad50/OS"
description = "A heap allocator framework that can be implemented based on increasing page allocator, usable anywhere."
keywords = ["heap", "allocator", "kernel", "os"]
categories = ["no-std", "kernel", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.2", optional = true }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[features]
rustc-dep-of-std = [
    "core",
    "compiler_builtins",
    "compiler_builtins/mem",
    "alloc",
]
