[package]
name = "emerald_kernel_user_link"
version = "0.2.8"
edition = "2021"
readme = "README.md"
authors = ["Amjad Alsharafi"]
license = "MIT"
repository = "https://github.com/Amjad50/Emerald"
description = "An interface to link kernel/user code in Emerald OS"
keywords = ["userspace", "kernel", "os"]
categories = ["kernel", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.2", optional = true }

[features]
rustc-dep-of-std = [
    "core",
    "compiler_builtins",
]
