[package]
name = "emerald_keyboard"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Amjad Alsharafi"]
license = "MIT"
repository = "https://github.com/Amjad50/Emerald"
description = "userspace keyboard events reader for Emerald OS"
keywords = ["userspace", "keyboard", "os"]
categories = ["os"]

[dependencies]
kernel_user_link = { version="0.2.5", path = "../kernel_user_link", package = "emerald_kernel_user_link" }
