[package]
name = "user_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
increasing_heap_allocator = { path = "../increasing_heap_allocator" }
kernel_user_link = { path = "../kernel_user_link" }

core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.2", optional = true }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[features]
rustc-dep-of-std = [
    "core",
    "compiler_builtins",
    "alloc",
    "kernel_user_link/rustc-dep-of-std",
    "increasing_heap_allocator/rustc-dep-of-std"
]
