[package]
name = "init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel_user_link = { path = "../../libraries/kernel_user_link" }
std = { path = "../../extern/rust/library/std", default-features = false, features = [
    "panic_immediate_abort",
] }
panic_abort = { path = "../../extern/rust/library/panic_abort" }
