[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

[[bin]]
name = "shell"
path = "src/shell.rs"

[[bin]]
name = "xxd"
path = "src/xxd.rs"

[[bin]]
name = "keyboard"
path = "src/keyboard.rs"

[[bin]]
name = "mouse"
path = "src/mouse.rs"

[dependencies]
colored = "2.1.0"
emerald_runtime = { path = "../../libraries/emerald_runtime"}